Added filtering and other options to SampleView of Databrowser